--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">郊外にある、歴史も古い小学校・・・<br>
-            いつの間にか、放課後に家庭科室から奇妙な叫び声が聞こえてくるという噂が流れ始めた。<br>
-            調査したが、噂の出どころはわからない。<br>
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。<br>
-            生徒に人気のS先生が一人で調査に入ったが、いつまでも帰ってこない。<br>
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの<br>
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+          <p class="text-center">「助けてくれないか」深夜、薄暗い部屋に何時ぶりかの通知音が響いた。<br>
+            もう数年会ってない古い友人、田中からの連絡だ。<br>
+　　　　　　　田中は俺ともう一人と仲良くしていた三人組の一人だ。しかし俺たちはそれぞれの道を行き、いつのまにか会わなくなってしまっていた。<br>
+　　　　　　　…「詳しく聞かせてくれ。」<br>
+            　　　　　＊　＊　＊<br>
+            話は深夜まで続いた。時計の針は丑三つ時を指している。<br>
+            あいつの話によると、どうやら身に覚えのない借金の取り立てにあい、地下施設に入れられたこと。<br>
+            地下施設ではおぞましい体罰があり、小指が無くなった奴もいること、<br>
+            そして一週間後に収容者の証として刺青を入れられること<br>
+            がわかった。刺青がある限り逃げ出したとしても施設の人間から一生追い回されることも。<br>
+          　厄介なことに首を突っ込んでしまったことに少し後悔しつつも、目の覚めるような好奇心が勝る。<br>
+            俺は一週間以内に田中を施設から脱出させることにした。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
