--- a/index.html
+++ b/index.html
@@ -40,15 +40,18 @@
             そして一週間後に収容者の証として刺青を入れられること<br>
             がわかった。刺青がある限り逃げ出したとしても施設の人間から一生追い回されることも。<br>
           　厄介なことに首を突っ込んでしまったことに少し後悔しつつも、目の覚めるような好奇心が勝る。<br>
-            俺は一週間以内に田中を施設から脱出させることにした。</p>
+            俺は一週間以内に田中を施設から脱出させることにした。<br>
+          　そしてもう一つ、どうやら施設側の人間に協力者がいるらしいのだ。<br>
+          　捕えられた部屋に日に2回食事の配給があるのだが、食器の裏にメモが隠されていたという。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>テストに暗号を隠した</li>
+              <li>解いて俺のところに来てくれ。話がしたい。</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">収容三日目。今日はIQテストがある日だ。<br>
+            テストの出来によって仕事が変わり、人間として最低限の扱いをされるかどうかもここで決まるという。<br>
+            田中と協力してテストを解こう</p>
         </div>
       </div>
     </section>
