--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/315.png" alt="">
+                <img src="assets/images/315.jpg" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
@@ -131,7 +131,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="assets/images/問1.png" alt="">
+                    <img src="assets/images/問1.jpg" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
@@ -203,7 +203,7 @@ Youtube貼り付けここまで -->
               どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
               これらを解決するための最後の謎を解いていこう！</p>
             <figure class="image__container">
-              <img src="assets/images/さんようび.png" alt="">
+              <img src="assets/images/さんようび.jpg" alt="">
             </figure>
           </div>
         </section>
