--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/脱出.jpg" alt="地下労働施設からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -37,6 +37,7 @@
             <p class="text-center">ランク分けテスト当日。順調に問題を解いていく田中。<br>
               高校の頃から頭は悪くない奴だった。借金をするような奴でもない。しかし、ふと手が止まる。<br>
               不可解な注意書きがあるのだという。<br>
+              どのページに気をつければいいのか。<br>
               送られてきた画像を見て考えよう。</p>
             
   
