--- a/main.html
+++ b/main.html
@@ -111,7 +111,8 @@ Youtube貼り付けここまで -->
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>ラスト3問！</h2>
               <p class="text-center">そしてまた田中は黙々と回答を続ける。<br>
                 十分ほど経った時。<br>
-                恐らく暗号なのであろう3問がわからないと、写真を送ってきた。</p>
+                恐らく暗号なのであろう3問がわからないと、写真を送ってきた。<br>
+                3問の答えを続けて回答しよう。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -133,6 +134,8 @@ Youtube貼り付けここまで -->
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
                     <img src="assets/images/問1.jpg" alt="">
+                     <img src="assets/images/問2.jpg" alt="">
+                     <img src="assets/images/問3.jpg" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
