--- a/main.html
+++ b/main.html
@@ -186,8 +186,11 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">恐らくこの答えが暗号だろう。<br>
+                「３１４」「さいし」<br>
+                つまりは再試を受けにいくことによって協力者と話ができる、ということ。<br>
+                田中は最後の3問の答え、３１４のみ回答し、残りの回答は消しゴムで綺麗さっぱり消してしまった。<br>
+                テストは回収され、採点のため収容者たちは部屋へと戻った。</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -203,9 +206,12 @@ Youtube貼り付けここまで -->
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <p class="text-center">翌日。再試を受けることになった田中は施設の奥の部屋へと通された。<br>
+              無口だった施設員が扉を閉め、鍵をかけると、小さな声で「私がメモを送った協力者の山田だ」<br>
+              続けて「この施設には秘密がある」「俺はそれを明かすためにここに来たんだ」<br>
+             「その秘密はある部屋で厳重に守られている」「お前は外と連絡が取れるんだろう？」その情報室に侵入したいことがわかった。<br>
+              当然監視の目が厳しいとのこと。そこで一時的に監視員の気を引くので田中に部屋に侵入し情報をゲットして欲しいとのこと。<br>
+              早速情報室に忍び込んだものの、情報室のパソコンのセキュリティ解除には謎解きが必要なようだ　</p>
             <figure class="image__container">
               <img src="assets/images/さんようび.jpg" alt="">
             </figure>
