--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>地下労働施設からの脱出 │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -17,14 +17,15 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/脱出.jpg" alt="地下労働施設からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">謎を解き、セキュリティを解除、山田が欲しかった情報が入ったUSBを入手した。<br>
+            協力した報酬に脱出に必要なパスワードとカードキーを教えてくれたようだ。<br>
+            次の日…脱出を決行した。</p>
         </div>
       </div>
     </section>
@@ -44,10 +45,16 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">繋ぎっぱなしのテレビ電話の画面が明るくなる。脱出は成功だ。画面には空が映っている。<br>
+          「やったな！」俺がいうと田中は「ああ！やっとd「「！！！」」」<br>
+          銃声。画面は回転して鈍い音が流れる。「うあっ」<br>
+         「おい！！！！」<br>
+          しまった、施設の奴らにつけられていた。しばらくの沈黙。<br>
+          そして、誰かが田中の携帯を拾い上げて…「やあ」<br>
+          「全部嘘だよ、ドキドキした？」<br>
+          そこには田中と三人組のもう一人、佐藤が居た。<br>
+          「「最近お前と遊んでなかったからさ、また遊ぼうぜ！」」<br>
+        <p class="text-center">「ああ！」俺は笑顔で応えた。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
