--- a/main.html
+++ b/main.html
@@ -205,7 +205,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>セキュリティ解除</h2>
             <p class="text-center">翌日。再試を受けることになった田中は施設の奥の部屋へと通された。<br>
               無口だった施設員が扉を閉め、鍵をかけると、小さな声で「私がメモを送った協力者の山田だ」<br>
               続けて「この施設には秘密がある」「俺はそれを明かすためにここに来たんだ」<br>
