--- a/main.html
+++ b/main.html
@@ -213,7 +213,7 @@ Youtube貼り付けここまで -->
               当然監視の目が厳しいとのこと。そこで一時的に監視員の気を引くので田中に部屋に侵入し情報をゲットして欲しいとのこと。<br>
               早速情報室に忍び込んだものの、情報室のパソコンのセキュリティ解除には謎解きが必要なようだ　</p>
             <figure class="image__container">
-              <img src="assets/images/さんようび.jpg" alt="">
+              <img src="assets/images/にちようび.jpg" alt="">
             </figure>
           </div>
         </section>
