--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
               高校の頃から頭は悪くない奴だった。借金をするような奴でもない。しかし、ふと手が止まる。<br>
               不可解な注意書きがあるのだという。<br>
               どのページに気をつければいいのか。<br>
-              送られてきた画像を見て考えよう。</p>
+              送られてきた画像を見て考えよう。ひらがなで回答しよう。</p>
             
   
             <div class="container">
@@ -112,7 +112,7 @@ Youtube貼り付けここまで -->
               <p class="text-center">そしてまた田中は黙々と回答を続ける。<br>
                 十分ほど経った時。<br>
                 恐らく暗号なのであろう3問がわからないと、写真を送ってきた。<br>
-                3問の答えを続けて回答しよう。</p>
+                3問の答えを続けて数字で回答しよう。</p>
             </div>
           </div>
           <div class="stage-column__container section bg-color--keycolor">
@@ -211,7 +211,8 @@ Youtube貼り付けここまで -->
               続けて「この施設には秘密がある」「俺はそれを明かすためにここに来たんだ」<br>
              「その秘密はある部屋で厳重に守られている」「お前は外と連絡が取れるんだろう？」その情報室に侵入したいことがわかった。<br>
               当然監視の目が厳しいとのこと。そこで一時的に監視員の気を引くので田中に部屋に侵入し情報をゲットして欲しいとのこと。<br>
-              早速情報室に忍び込んだものの、情報室のパソコンのセキュリティ解除には謎解きが必要なようだ　</p>
+              早速情報室に忍び込んだものの、情報室のパソコンのセキュリティ解除には謎解きが必要なようだ。<br>
+              ひらがなで打ち込もう。</p>
             <figure class="image__container">
               <img src="assets/images/21.jpg" alt="">
             </figure>
