--- a/hint3.html
+++ b/hint3.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ヒント │ 封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>ヒント │ 地下労働施設からの脱出 │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -30,21 +30,10 @@
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">ヒント集</h2>
           <p class="text-center">ちょっと難しかったですか？<br>
-            謎のヒントと答えは下記から確認できます。</p>
+            謎の答えは下記から確認できます。</p>
         </div>
       </div>
     </section>
-    <!-- STAGE3ヒント　ここから -->
-    <section id="stage3" class="section bg-color--gray">
-      <div class="container">
-        <h2 class="section-title section-title--keycolor">STAGE：3</h2>
-        <div class="row">
-          <div class="column">
-            <div class="card">
-              <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
-            </div>
-              
  <!-- 3-2ヒント追加
             <div class="card">
               <h3 class="card__title">3-2ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
@@ -63,7 +52,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">えええ</p>
+              <p class="card__content">にちようび</p>
             </div>
 
  <!-- 3-2答え追加
